{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 75,
  "lineage": "4c058d5c-66b4-3407-e02d-1090388058ec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "erp_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:337751748608:instance/i-036b9ba6543056fa3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-036b9ba6543056fa3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01eeec427d7e2aef5",
            "private_dns": "ip-10-0-1-132.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.132",
            "public_ip": "34.205.177.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0be35ca456f1149ac",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d35062af8d5d35c5",
            "tags": {
              "Name": "devops-erp-server"
            },
            "tags_all": {
              "Name": "devops-erp-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02b96174888b38056"
            ]
          },
          "dependencies": [
            "aws_key_pair.devops_key",
            "aws_security_group.erp_sg",
            "aws_subnet.erp_subnet",
            "aws_vpc.erp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "erp_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337751748608:internet-gateway/igw-0982134ef85fe72e4",
            "id": "igw-0982134ef85fe72e4",
            "owner_id": "337751748608",
            "tags": {
              "Name": "devops-erp-igw"
            },
            "tags_all": {
              "Name": "devops-erp-igw"
            },
            "vpc_id": "vpc-0f09dc0d75ce1b752"
          },
          "dependencies": [
            "aws_vpc.erp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "erp_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337751748608:route-table/rtb-0703f18b807986e7f",
            "id": "rtb-0703f18b807986e7f",
            "owner_id": "337751748608",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0982134ef85fe72e4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f09dc0d75ce1b752"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.erp_igw",
            "aws_vpc.erp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "erp_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0191e2545c48edbc4",
            "route_table_id": "rtb-0703f18b807986e7f",
            "subnet_id": "subnet-0d35062af8d5d35c5"
          },
          "dependencies": [
            "aws_internet_gateway.erp_igw",
            "aws_route_table.erp_rt",
            "aws_subnet.erp_subnet",
            "aws_vpc.erp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "erp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337751748608:security-group/sg-02b96174888b38056",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b96174888b38056",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devops-erp-sg",
            "name_prefix": "",
            "owner_id": "337751748608",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-erp-sg"
            },
            "tags_all": {
              "Name": "devops-erp-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f09dc0d75ce1b752"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.erp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "erp_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337751748608:subnet/subnet-0d35062af8d5d35c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d35062af8d5d35c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337751748608",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-erp-subnet"
            },
            "tags_all": {
              "Name": "devops-erp-subnet"
            },
            "vpc_id": "vpc-0f09dc0d75ce1b752"
          },
          "dependencies": [
            "aws_vpc.erp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "erp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337751748608:vpc/vpc-0f09dc0d75ce1b752",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e80b18257ba97d83",
            "default_route_table_id": "rtb-03dbb227340a3a005",
            "default_security_group_id": "sg-0f58e634d4790e6b5",
            "dhcp_options_id": "dopt-02d687ae5efb7e13c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f09dc0d75ce1b752",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03dbb227340a3a005",
            "owner_id": "337751748608",
            "tags": {
              "Name": "devops-erp-vpc"
            },
            "tags_all": {
              "Name": "devops-erp-vpc"
            }
          }
        }
      ]
    }
  ]
}